# genaialogy

./: .gitignore  LICENSE  README.md  pyproject.toml
genaialogy/agents/: lineage.py
genaialogy/tests/: cache.py
genaialogy/tools/: biography.py  documents.py  dropbox.py  gedcom.py  llm.py  query.py
tests/: test_biography.py  test_lineage.py  test_llm.py
